--- a/frontend/client/src/app/components/main/main.html
+++ b/frontend/client/src/app/components/main/main.html
@@ -1,31 +1,5 @@
-﻿<!-- app.component.html -->
+<!-- app.component.html -->
 <div class="min-h-screen print:hidden">
-  <!-- Header -->
-  <!--<header class="top-0 z-50 hidden items-center justify-between bg-gray-100 p-4 shadow-md sm:sticky sm:flex">
-
-    <div class="relative ml-auto">
-      <button type="button">Download as PDF</button>
-      <p-dropdown [options]="languageService.languages"
-                  [(ngModel)]="languageService.currentLang"
-                  (onChange)="changeLanguage($event.value)"
-                  optionLabel="label"
-                  dataKey="value"
-                  [showClear]="false">
-        <ng-template let-lang pTemplate="selectedItem">
-          <div class="flex items-center gap-2">
-            <img [src]="lang.icon" alt="" class="h-5 w-5" />
-            <span>{{ lang.label }}</span>
-          </div>
-        </ng-template>
-        <ng-template let-lang pTemplate="item">
-          <div class="flex items-center gap-2">
-            <img [src]="lang.icon" alt="" class="h-5 w-5" />
-            <span>{{ lang.label }}</span>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
-  </header>-->
 
   <!-- FAB Wrapper -->
   <div class="fixed right-4 bottom-4 z-50">
@@ -42,13 +16,6 @@
              class="h-full w-full rounded-full object-cover" />
       </button>
       }
-
-      <!-- Print -->
-      <button class="bg-darkgray flex h-11 w-11 items-center justify-center rounded-full bg-gray-300 shadow-md hover:bg-gray-700 hover:text-white"
-              (click)="printClick()"
-              title="{{ 'print' | translate }}">
-        <span class="material-icons">print</span>
-      </button>
 
       <!-- Download as PDF -->
       <a href="{{ 'personalInfo.cvUrl' | translate }}" download class="flex h-11 w-11 items-center justify-center rounded-full bg-gray-300 shadow-md hover:bg-gray-700 hover:text-white"
@@ -199,7 +166,4 @@
 </div>
 
 <!-- Printable CV -->
-<div class="hidden print:block">
-  <app-printable-cv></app-printable-cv>
-</div>
-
+<app-printable-cv [isStandalone]="false"></app-printable-cv>
